[package]
name = "multihash"
description = "Implementation of the multihash format"
repository = "https://github.com/multiformats/rust-multihash"
keywords = ["multihash", "ipfs"]
version = "0.9.4"
authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/multihash/"
edition = "2018"

[dependencies]
blake2b_simd = { version = "0.5.9", default-features = false }
blake2s_simd = { version = "0.5.9", default-features = false }
bytes = "0.5"
sha1 = "0.6"
sha2 = { version = "0.8", default-features = false }
tiny-keccak = { version = "2.0.0", features = ["keccak", "sha3"] }
unsigned-varint = "0.3"
digest = { version = "0.8", default-features = false }
enum-primitive-derive = "0.1.2"
num-traits = "0.2.11"
